feat: add performance audio and video kinds
